--- a/x360ce.Engine/Resources/Icons/Icons_Default.xaml
+++ b/x360ce.Engine/Resources/Icons/Icons_Default.xaml
@@ -1279,19 +1279,25 @@
 			</Canvas.RenderTransform>
 			<Canvas.Resources />
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#1A000000" StrokeThickness="0.999995">
+			<Path
+				xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+				Fill="#1A000000"
+				StrokeThickness="0.999995">
 				<Path.Data>
 					<PathGeometry Figures="M 0 512 H 512 V 0 H 0 Z" FillRule="EvenOdd" />
 				</Path.Data>
 			</Path>
-			<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#FF42C765" StrokeThickness="0.999995">
+			<Path
+				xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+				Fill="#FF42C765"
+				StrokeThickness="0.999995">
 				<Path.Data>
 					<PathGeometry Figures="M 512 512 H 0 L 512 0 Z" FillRule="EvenOdd" />
 				</Path.Data>
 			</Path>
 		</Canvas>
 	</Viewbox>
-<Viewbox
+	<Viewbox
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		x:Key="Icon_DragAndDrop_Axis_Half_2"
 		x:Shared="False"
@@ -1303,12 +1309,18 @@
 			</Canvas.RenderTransform>
 			<Canvas.Resources />
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#1A000000" StrokeThickness="0.999995">
+			<Path
+				xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+				Fill="#1A000000"
+				StrokeThickness="0.999995">
 				<Path.Data>
 					<PathGeometry Figures="M 0 512 H 512 V 0 H 0 Z" FillRule="EvenOdd" />
 				</Path.Data>
 			</Path>
-			<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#FF42C765" StrokeThickness="0.999995">
+			<Path
+				xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+				Fill="#FF42C765"
+				StrokeThickness="0.999995">
 				<Path.Data>
 					<PathGeometry Figures="M 512 512 H 256 L 512 0 Z" FillRule="EvenOdd" />
 				</Path.Data>
@@ -1375,19 +1387,25 @@
 			</Canvas.RenderTransform>
 			<Canvas.Resources />
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#1A000000" StrokeThickness="0.999995">
+			<Path
+				xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+				Fill="#1A000000"
+				StrokeThickness="0.999995">
 				<Path.Data>
 					<PathGeometry Figures="M 512 512 H 0 V 0 h 512 z" FillRule="EvenOdd" />
 				</Path.Data>
 			</Path>
-			<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#FF6699FF" StrokeThickness="0.999995">
+			<Path
+				xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+				Fill="#FF6699FF"
+				StrokeThickness="0.999995">
 				<Path.Data>
 					<PathGeometry Figures="M 0 512 H 512 L 0 0 Z" FillRule="EvenOdd" />
 				</Path.Data>
 			</Path>
 		</Canvas>
 	</Viewbox>
-<Viewbox
+	<Viewbox
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		x:Key="Icon_DragAndDrop_Axis_Half_2_Inverted"
 		x:Shared="False"
@@ -1399,12 +1417,18 @@
 			</Canvas.RenderTransform>
 			<Canvas.Resources />
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#1A000000" StrokeThickness="0.999995">
+			<Path
+				xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+				Fill="#1A000000"
+				StrokeThickness="0.999995">
 				<Path.Data>
 					<PathGeometry Figures="M 512 512 H 0 V 0 h 512 z" FillRule="EvenOdd" />
 				</Path.Data>
 			</Path>
-			<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#FF6699FF" StrokeThickness="0.999995">
+			<Path
+				xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+				Fill="#FF6699FF"
+				StrokeThickness="0.999995">
 				<Path.Data>
 					<PathGeometry Figures="M 0 512 H 256 L 0 0 Z" FillRule="EvenOdd" />
 				</Path.Data>
@@ -1425,12 +1449,18 @@
 			<Canvas.Resources />
 			<!--  Unknown tag: sodipodi:namedview  -->
 			<Canvas>
-				<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#1A000000" StrokeThickness="0.999995">
+				<Path
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+					Fill="#1A000000"
+					StrokeThickness="0.999995">
 					<Path.Data>
 						<PathGeometry Figures="M 512 512 H 0 V 0 h 512 z" FillRule="EvenOdd" />
 					</Path.Data>
 				</Path>
-				<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#FF42C765" StrokeThickness="0.999995">
+				<Path
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+					Fill="#FF42C765"
+					StrokeThickness="0.999995">
 					<Path.Data>
 						<PathGeometry Figures="M 512 0 V 512 H 256 V 0 Z" FillRule="EvenOdd" />
 					</Path.Data>
@@ -1450,12 +1480,18 @@
 			</Canvas.RenderTransform>
 			<Canvas.Resources />
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#1A000000" StrokeThickness="0.999995">
+			<Path
+				xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+				Fill="#1A000000"
+				StrokeThickness="0.999995">
 				<Path.Data>
 					<PathGeometry Figures="M 0 512 H 512 V 0 H 0 Z" FillRule="EvenOdd" />
 				</Path.Data>
 			</Path>
-			<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#FF6699FF" StrokeThickness="0.999995">
+			<Path
+				xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+				Fill="#FF6699FF"
+				StrokeThickness="0.999995">
 				<Path.Data>
 					<PathGeometry Figures="M 0 0 V 512 H 256 V 0 Z" FillRule="EvenOdd" />
 				</Path.Data>
@@ -1474,12 +1510,18 @@
 			</Canvas.RenderTransform>
 			<Canvas.Resources />
 			<!--  Unknown tag: sodipodi:namedview  -->
-			<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#1A000000" StrokeThickness="0.999995">
+			<Path
+				xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+				Fill="#1A000000"
+				StrokeThickness="0.999995">
 				<Path.Data>
 					<PathGeometry Figures="M 512 512 H 0 V 0 h 512 z" FillRule="EvenOdd" />
 				</Path.Data>
 			</Path>
-			<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#FF42C765" StrokeThickness="0.999995">
+			<Path
+				xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+				Fill="#FF42C765"
+				StrokeThickness="0.999995">
 				<Path.Data>
 					<PathGeometry Figures="M 384 0 H 512 V 512 H 128 V 341 H 256 V 171 h 128 z" FillRule="EvenOdd" />
 				</Path.Data>
@@ -1499,12 +1541,18 @@
 			<Canvas.Resources />
 			<!--  Unknown tag: sodipodi:namedview  -->
 			<Canvas>
-				<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#1A000000" StrokeThickness="0.999995">
+				<Path
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+					Fill="#1A000000"
+					StrokeThickness="0.999995">
 					<Path.Data>
 						<PathGeometry Figures="M 0 512 H 512 V 0 H 0 Z" FillRule="EvenOdd" />
 					</Path.Data>
 				</Path>
-				<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Fill="#FF6699FF" StrokeThickness="0.999995">
+				<Path
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+					Fill="#FF6699FF"
+					StrokeThickness="0.999995">
 					<Path.Data>
 						<PathGeometry Figures="M 128 0 H 0 V 512 H 384 V 341 H 256 V 171 H 128 Z" FillRule="EvenOdd" />
 					</Path.Data>
