Drag and drop update.

--- a/x360ce.App/Controls/PadItem_GeneralControl.xaml
+++ b/x360ce.App/Controls/PadItem_GeneralControl.xaml
@@ -145,8 +145,8 @@
                         <Setter Property="HorizontalAlignment" Value="Left" />
                         <Setter Property="Background" Value="Transparent" />
                         <Setter Property="IsHitTestVisible" Value="True" />
-                        <EventSetter Event="MouseEnter" Handler="RecordClear_MouseEnter" />
-                        <EventSetter Event="MouseLeave" Handler="RecordClear_MouseLeave" />
+                        <EventSetter Event="MouseEnter" Handler="RecordClear_MouseEnterStackPanel" />
+                        <EventSetter Event="MouseLeave" Handler="RecordClear_MouseLeaveStackPanel" />
                         <!--  StackPanel (Name and XI value) -->
                         <Style.Resources>
                             <Style TargetType="StackPanel">
