--- a/x360ce.App/Controls/OptionsControl.xaml
+++ b/x360ce.App/Controls/OptionsControl.xaml
@@ -42,7 +42,7 @@
                 Height="Auto"
                 x:FieldModifier="public" />
         </TabItem>
-        <TabItem Name="HidGuardianTabPage" Header="HID Guardian">
+        <TabItem Name="HidGuardianTabPage" Header="HidHide · HID Guardian">
             <local:OptionsHidGuardianControl
                 x:Name="HidGuardianPanel"
                 Width="Auto"
