--- a/x360ce.App/Controls/AboutUserControl.xaml
+++ b/x360ce.App/Controls/AboutUserControl.xaml
@@ -17,7 +17,6 @@
             <Grid.RowDefinitions>
                 <RowDefinition />
                 <RowDefinition />
-                <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
@@ -45,70 +44,23 @@
                 Grid.Column="1"
                 Padding="4,0,0,0"
                 Content="Settings editor and test application for XBOX 360 Controller Emulator" />
-
-            <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="1">
-                <StackPanel.Resources>
-                    <Style TargetType="Label">
-                        <Setter Property="Padding" Value="8,0,4,0"/>
-                    </Style>
-                    <Style TargetType="Hyperlink">
-                        <Setter Property="TextDecorations" Value="None"/>
-                        <EventSetter Event="RequestNavigate" Handler="HyperLink_RequestNavigate"/>
-                    </Style>
-                </StackPanel.Resources>
-
-                <!--x360ce Homepage-->
-                <Label Content="Homepage"/>
-                <TextBlock>
-                    <Hyperlink NavigateUri="https://www.x360ce.com">
-                        x360ce.com
-                    </Hyperlink>
-                </TextBlock>
-
-                <!--GitHub Project-->
-                <Label Content="GitHub" />
-                <TextBlock>
-                   <Hyperlink NavigateUri="https://github.com/x360ce/x360ce">
-                      github.com/x360ce/x360ce
-                   </Hyperlink>
-                </TextBlock>
-
-                <!--ViGEm-->
-                <Label  Content="ViGEm" />
-                <TextBlock>
-                    <Hyperlink NavigateUri="https://vigembusdriver.com">
-                        vigembusdriver.com
-                    </Hyperlink>
-                </TextBlock>
-
-                <!--ToCA EDIT-->
-                <Label Content="ToCA EDIT" />
-                <TextBlock>
-                    <Hyperlink NavigateUri="http://www.tocaedit.com">
-                        tocaedit.com
-                    </Hyperlink>
-                </TextBlock>
-
-                <!--Jocys.com-->
-                <Label Content="Jocys.com" />
-                <TextBlock>
-                    <Hyperlink NavigateUri="https://www.jocys.com">
-                        jocys.com
-                    </Hyperlink>
-                </TextBlock>
-
-                <!--Nucleoprotein-->
-                <Label Content="Nucleoprotein" />
-                <TextBlock>
-                    <Hyperlink NavigateUri="https://github.com/nucleoprotein">
-                        github.com/nucleoprotein
-                    </Hyperlink>
-                </TextBlock>
-            </StackPanel>
         </Grid>
 
         <TabControl Name="AboutTabControl" Grid.Row="1" Margin="3">
-            <TabItem Name="ChangesTabPage" Header="Changes" Background="White">
+            <TabItem Name="ProgramTabPage" Header="Program" Background="White">
+                <RichTextBox Name="ProgramRichTextBox" Background="Transparent" Padding="5">
+                    <RichTextBox.Style>
+                        <Style TargetType="RichTextBox" BasedOn="{StaticResource RichTextBox_Default}">
+                            <Setter Property="LayoutTransform">
+                                <Setter.Value>
+                                    <ScaleTransform ScaleX="1" ScaleY="1" />
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </RichTextBox.Style>
+                </RichTextBox>
+            </TabItem>
+            <TabItem Name="ChangesTabPage" Header="Version Changes" Background="White">
                 <TextBox
                     Name="ChangeLogTextBox"
                     Margin="0"
